file structuring and route set up

--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -86,7 +86,7 @@
                     <h5 class="center-align"> Frequently Asked Questions </h5>
                     <p class="faq center-align">
                         <!--The href will make the FAQ clickable.-->
-                        Visit our <a href="/faqpage/faq.html"> FAQ</a> page for additional questions and support.
+                        Visit our <a href="/public/html/faq.html"> FAQ</a> page for additional questions and support.
                     </p>
                 </div>
 
